--- a/web/estilos.css
+++ b/web/estilos.css
@@ -60,9 +60,9 @@ body{
     height: 100%;
     /* background-image: linear-gradient(to top, #fbc2eb 0%, #a6c0ee 100%); */
     /* 02 */
-    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+    background-image: linear-gradient(to top, #eb8b32b0 0%, #1a9be6a6 100%);
     /* 028 */
-    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background-image: linear-gradient(135deg, #eb8029d5 0%, #1ea3e0 100%);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
